--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,18 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Mlflow
+mlruns/
+mlartifacts/
+outputs/
+mlruns.db
+
+# outputs
+outputs/
+
+# wandb
+wandb/
+
+# artifacts
+artifacts/
